Ensure the map scrolls behind the header

--- a/dynamic-site/css/web.css
+++ b/dynamic-site/css/web.css
@@ -38,8 +38,8 @@ table {
 #container {
 	margin:0 auto;
 	overflow:auto;
-	/*padding:80px 0;
-	width:940px;*/
+	padding:80px 0;
+	/*width:940px;*/
 	margin: 25px 25% 0 5%;
 }
 #content{}
